--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -1,3 +1,6 @@
+.dialog{
+    padding: 15px 0 50px;
+}
 .box{
     width:350px;
     overflow: hidden;
@@ -5,15 +8,26 @@
    
 }
 .scroller{
-   height:200px;
-   width:350px;
+   max-height:260px;
+   width:100%;
    overflow-y: scroll;
    padding-left: 15px;
     .addrow{
         //background: red;
         .info{
-            width: 20rem;
-            //background: red;
+            width: auto;
+            padding:0 10px 10px 0;
+            .layui-select-title{
+                .layui-input{
+                    width:80px;
+                    height:35px;
+                    line-height:35px;
+                }
+            }
+            div{
+                text-align: left;
+                display: inline-block;
+            }
         }
     }
 }
@@ -25,12 +39,15 @@
 
     }
     .addPP{
-        width: 160px;
-        height: 1.5rem;
+        width: 130px;
+        height: 34px;
+        line-height: 34px;
         text-align: center;
     }
     .col{
         float:left;
+        height: 34px;
+        line-height: 34px;
     }
     div{
         width:80px;
@@ -50,8 +67,8 @@
     &::after{
         clear:both;
     }
-    height:30px;
-    width:280px;
+    min-height:35px;
+    width:100%;
 }
 .buttons{
     position:absolute;
