--- a/src/app.less
+++ b/src/app.less
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    color:#333;
 }
 /**
  *清除浮动
@@ -62,10 +63,8 @@ body {
                     width:20px;
                 }
                 .contenteditable{
-                    width:90px;
+                    width:100px;
                     height:28px;
-                    text-wrap:none;
-                    padding-left:10px;
                     line-height:28px;
                     overflow: hidden;
                     
@@ -82,17 +81,17 @@ body {
                 ;
                 img {
                     width: 15px;
-                    margin-right: 10px;
+                    margin-right: 8px;
                     margin-top: -5px;
                     cursor: pointer;
                 }
             }
             .b {
                 line-height: 40px;
-                font-size: 12px;
+                font-size: 13px;
                 img {
-                    width: 12px;
-                    margin:0 2px 0 10px;
+                    width: 15px;
+                    margin:0 0 0 10px;
                     position: relative;
                     top: -2px;
                 }
