--- a/src/app.less
+++ b/src/app.less
@@ -32,7 +32,7 @@ body {
     float: left;
     .top {
         border-bottom:1px solid #ddd;
-        padding:15px 10px;
+        padding:12px 10px 15px;
         box-shadow:0px 1px 8px -6px #333;
         select {
             width: 100px;
@@ -61,12 +61,15 @@ body {
             background: #fbfbfb;
         }
         .box {
-            border: 1px solid #ddd;
+            border: 2px solid #e6e6e6;
             border-radius: 5px;
             background: #fff;
             height: 70px;
             margin: 10px;
             width: 250px;
+            -moz-box-shadow:2px 2px 2px 0px #007bc440; 
+            -webkit-box-shadow:2px 2px 2px 0px #007bc440; 
+            box-shadow:2px 2px 2px 0px #007bc440;
             &.active{
                 border:1px solid rgba(51, 153, 255, 1);
             }
@@ -151,17 +154,18 @@ body {
         z-index:20000;
         
         input{
-            float:left;
-            height:26px;
+            width: auto;
+            height: 31px;
+            float: left;
             border:1px solid #007BC4;
             padding-left:12px;
         }
         span{
+            display: inline-block;
             background:#007BC4;
             color:#fff;
             font-size:12px;
             height:30px;
-            display: block;
             float:left;
             line-height:30px;
             width:90px;
