--- a/src/app.less
+++ b/src/app.less
@@ -38,12 +38,13 @@ body {
     float: left;
     position: relative;
     .right{
+        z-index:1000;
         position: absolute;
-        right:-2px;
+        right:-5px;
         top:0;
         cursor:e-resize;
         // background:red;
-        width:8px;
+        width:10px;
         height:100vh;
     }
     .top {
