--- a/src/app.less
+++ b/src/app.less
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     color:#606266;
+    .layui-layer-shade{
+        opacity:0.09!important; 
+    }
     .too-long1{
         overflow: hidden;
         text-overflow:ellipsis;
@@ -163,7 +166,7 @@ body {
         height:200px;
         bottom:0;
         background:#fff;
-        z-index:100000;
+        z-index:995;
         position:absolute;
     }
     .search{
