--- a/src/app.less
+++ b/src/app.less
@@ -315,3 +315,76 @@ body {
     /* 鼠标移入滑块 */
     background: #909090;
 }
+/**
+* 下拉框样式
+*/
+.select-menu{
+    cursor:pointer;
+    width:100%;
+    height:32px;
+    .select-menu-ul{
+        margin-top:50px;
+        list-style:none;
+        opacity:0;
+        display:none;
+        width:100%;
+        text-align:left;
+        border:1px solid #ddd;
+        background:#fff;
+        position:absolute;
+        z-index:1;
+        max-height: 150px;
+        overflow: auto;
+    }
+    .select-menu-ul li{
+        line-height: 36px;
+        padding-left:10px;
+    }
+    .select-menu-ul li:hover{
+        background:#f2f2f2;
+    }
+    .select-menu-div{
+        position:relative;
+        height:30px;
+        width:100%;
+        padding-left:8px;
+        border-radius: 3px;
+        border:1px solid #ddd;
+        line-height:30px;
+    }
+    .select-this{
+        background:#5FB878;
+    }
+    .select-this:hover{
+        background:#5FB878!important;
+    }
+    
+    .select-menu-input{
+        border:0;
+        width:100%;
+        height:38px;
+        cursor:pointer;
+        user-select:none;
+    }
+    .select-menu-i{
+        transform:rotate(180deg);
+    }
+    i{
+        -webkit-transition: all 0.4s ease;
+        -o-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+        position: absolute;
+        right: 10px;
+        top: 0;
+        cursor: pointer;
+        transition: all .3s;
+        -webkit-transition: all .3s;
+        &.layui-icon-triangle-d{
+            font-size: 15px;
+            color: #c2c2c2; 
+        }
+    }
+}
+
+
+
