--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -29,14 +29,13 @@
             }
         }
     }
-    div{
+    &>div{
         text-align: left;
         display: inline-block;
     }
     .addSelect{
         width: 4rem;
         border: 1px solid #e5e5e5;
-
     }
     .addPP{
         width: 130px;
@@ -49,7 +48,7 @@
         height: 34px;
         line-height: 34px;
     }
-    div{
+    &>div{
         width:80px;
         line-height:22px;
         text-align: right;
