新增网格组件

--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -48,6 +48,24 @@
         height: 34px;
         line-height: 34px;
     }
+    .calculate-col{
+        width: auto;
+        .layui-input{
+            width: 90px;
+            height: 34px;
+            display: inline-block;
+            margin-right: 6px;
+            padding-left: 5px;
+        }
+        span{
+            padding: 5px 8px;
+            background: #1e9fff;
+            color: #fff;
+            border-radius: 3px;
+            margin-left: 15px;
+            font-size: 12px;
+        }
+    }
     &>div{
         width:80px;
         line-height:22px;
@@ -55,13 +73,13 @@
     }
     input{
         vertical-align: middle;
-        width:180px;
+        width:220px;
         height:20px;
     }
     select{
          vertical-align: middle;
         height:25px;
-        width:180px;
+        width:220px;
     }
     &::after{
         clear:both;
