--- a/src/app.less
+++ b/src/app.less
@@ -163,7 +163,7 @@ body {
     }
     .cksxb{
         width:100%;
-        height:200px;
+        height:auto;
         bottom:0;
         background:#fff;
         z-index:995;
@@ -284,36 +284,40 @@ body {
 
  ::-webkit-scrollbar:horizontal {
     height: 10px;
-    margin-bottom: 2px
+    margin-bottom: 2px;
+    cursor:pointer;
 }
 
  ::-webkit-scrollbar-track {
     /* 外层轨道 */
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
  ::-webkit-scrollbar-track-piece {
     /*内层轨道，滚动条中间部分 */
     background-color: #cbcbcb;
-    border-radius: 10px;
+    border-radius: 5px;
+    cursor:pointer;
 }
 
  ::-webkit-scrollbar-thumb {
     /* 滑块 */
-    width: 10px;
+    width: 5px;
     border-radius: 5px;
     background: #1e9fff;
+    cursor: pointer;
 }
 
  ::-webkit-scrollbar-corner {
     /* 边角 */
-    width: 10px;
+    width: 5px;
     background-color: red;
 }
 
  ::-webkit-scrollbar-thumb:hover {
     /* 鼠标移入滑块 */
     background: #909090;
+    cursor:pointer;
 }
 /**
 * 下拉框样式
